# nobara-kde-forge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  nobara_kde_forge.py  nobaraforgeKDE.sh  pyproject.toml  start.sh  web_app.py
.github/workflows/: ci.yml
configs/: external_packages.json  flatpak.json  install.json  laptop.json  optional_install.json  remove.json  theme_config_recommended.json  themes_cursors.json  themes_gtk.json  themes_icons.json  themes_kvantum.json
configs/profiles/: amd.json  base.json  browsers.json  communication.json  dev.json  distrobox.json  docker.json  gaming.json  handheld.json  htpc.json  multimedia.json  nvidia.json  office.json  privacy.json  system.json  vpn.json
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md
packaging/: install-desktop.sh  nobara-kde-forge.desktop
routes/: kde_settings.py  laptop.py  legacy.py  login_manager.py  nobara_tools.py  profiles.py  shared.py  state_routes.py  system.py  themes.py  tweaks.py
schemas/: __init__.py  external.py  flatpak.py  packages.py  profile.py  themes.py
scripts/: __init__.py  dnf_install.py  dnf_remove.py  external_install.py  flatpak_install.py  laptop_setup.py  optional_install.py  profile_install.py  themes_install.py
tests/: test_app_smoke.py  test_audio_tweaks.py  test_kde_backup.py  test_plasma_tweaks.py  test_power.py  test_sandbox.py  test_schemas.py  test_security.py  test_services_manager.py  test_system_info.py
utils/: __init__.py  audio_tweaks.py  file_utils.py  kde_backup.py  laptop_detect.py  lockfile.py  logging_utils.py  plasma_tweaks.py  power.py  profile_loader.py  sandbox.py  security.py  services_manager.py  state_manager.py  subprocess_utils.py  system_info.py  theme_manager.py  validation.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html
